assess2/vue-src/src/assess2.css
/* ... */
  .eqneditortrigger {
    margin: 0;
    border-left: 0;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    height: 30px;
    padding: 4px;
    vertical-align: bottom;
  }
  input.green {
    margin-left: 0;
    border-color: #090;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
  }
  input.red {
    margin-left: 0;
    border-color: #900;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
  }
  .scoremark {
    display: inline-block;
    height: 20px;
    padding: 4px;
    margin-right: 0;
    border: 1px solid;
    border-right: 0;
    border-radius: 4px 0 0 4px;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }
  .scoremark.red {
    border-color: #900;
    color: #900;
  }
  .scoremark.green {
    border-color: #090;
    color: #090;
  }
  .submitbtnwrap {
    margin: 16px 0;
  }
  .ansgrn {
    border: 1px solid #090 !important;
  }
  .ansred {
    border: 1px solid #900 !important;
  }
  .ansyel {
    border: 1px solid #fb0 !important;
  }
  .ansorg {
    border: 1px solid #f50 !important;
  }
  div.ansgrn, div.ansred, div.ansyel, div.ansorg {
    margin: -1px;
  }
  .mqfillin-mq .mq-editable-field {
    padding: 0px 1px;
  }
  .mqfillin-mq .mqinnerboxed {
    padding: 2px 3px;
  }
  input[type=text].ansgrn, .mq-editable-field.ansgrn, .mqinnerboxed.ansgrn,
  input[type=text].ansred, .mq-editable-field.ansred, .mqinnerboxed.ansred,
  input[type=text].ansyel, .mq-editable-field.ansyel, .mqinnerboxed.ansyel,
  input[type=text].ansorg, .mq-editable-field.ansorg, .mqinnerboxed.ansorg {
    background-repeat: no-repeat;
    background-position: right;
  }
  input[type=text].ansgrn, .mq-editable-field.ansgrn, .mqinnerboxed.ansgrn {
    padding-right: 17px;
    background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCIgd2lkdGg9IjE2IiBoZWlnaHQ9IjE2IiBzdHJva2U9ImdyZWVuIiBzdHJva2Utd2lkdGg9IjMiIGZpbGw9Im5vbmUiPjxwb2x5bGluZSBwb2ludHM9IjIwIDYgOSAxNyA0IDEyIj48L3BvbHlsaW5lPjwvc3ZnPg==");
  }
  input[type=text].ansred, .mq-editable-field.ansred, .mqinnerboxed.ansred {
    padding-right: 17px;
    background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCIgd2lkdGg9IjE2IiBoZWlnaHQ9IjE2IiBzdHJva2U9InJnYigxNTMsMCwwKSIgc3Ryb2tlLXdpZHRoPSIzIiBmaWxsPSJub25lIj48cGF0aCBkPSJNMTggNiBMNiAxOCBNNiA2IEwxOCAxOCIgLz48L3N2Zz4=");
  }
  input[type=text].ansyel, .mq-editable-field.ansyel, .mqinnerboxed.ansyel {
    padding-right: 17px;
    background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCIgd2lkdGg9IjE2IiBoZWlnaHQ9IjE2IiBzdHJva2U9InJnYigyNTUsMTg3LDApIiBzdHJva2Utd2lkdGg9IjMiIGZpbGw9Im5vbmUiPjxwYXRoIGQ9Ik0gNS4zLDEwLjYgOSwxNC4yIDE4LjUsNC42IDIxLjQsNy40IDksMTkuOCAyLjcsMTMuNSB6IiAvPjwvc3ZnPg==");
  }
  input[type=text].ansorg, .mq-editable-field.ansorg, .mqinnerboxed.ansorg {
    padding-right: 17px;
    background: right no-repeat url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCIgd2lkdGg9IjE2IiBoZWlnaHQ9IjE2IiBzdHJva2U9InJnYigyNTUsODUsMCkiIHN0cm9rZS13aWR0aD0iMyIgZmlsbD0ibm9uZSI+PHBhdGggZD0iTTE4IDYgTDYgMTggTTYgNiBMMTggMTgiIC8+PC9zdmc+");
  }
  .mqinnerboxed {
    display: inline-block;
  }
  

